Alignment, fixes
Stat alignment/sizing, ability description language fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -304,16 +304,20 @@ router-outlet{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    max-height: 130px;
+    height: 100%;
     width: 100%;
+    max-height: 145px;
     background-color: #27272A;
+    justify-content: center;
     padding-top: 10px;
     padding-bottom: 10px;
 }
 
 #stats > div{
+    height: 100%;
+    width: 45%;
+    max-height: 45px;
     margin-left: 10px;
-    width: 50%;
 }
 
 #stats > div > div, #slot-1-stats > div > div, #slot-2-stats > div > div, #slot-3-stats > div > div, 
